--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -1,13 +1,14 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import Header from '../components/Header.astro';
-import Hero from '../components/Hero.astro';
-import { getCollection} from 'astro:content';
+import Layout from '../../layouts/Layout.astro';
+import Card from '../../components/Card.astro';
+import Header from '../../components/Header.astro';
+import Hero from '../../components/Hero.astro';
+import { getCollection } from "astro:content";
 
 const posts = (await getCollection("tips")).sort(
-	(a,b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+    (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
+console.log(posts);
 ---
 
 <Layout title="Welcome to Astro.">
@@ -46,11 +47,12 @@ const posts = (await getCollection("tips")).sort(
 		
 		<ul role="list" class="link-card-grid">
 		{
-			allPosts.map((item) =>(
+			posts.map((post) =>(
 				<Card
-				title={item?.frontmatter?.title}
-				time={item?.frontmatter?.pubDate}
-				tags={item?.frontmatter?.tags}
+				title={post.data.title}
+				time={post.data.pubDate}
+				tags={post.data.tags}
+                slug={post.slug}
 			/>
 			))
 		}
