--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,10 +2,11 @@
 interface Props {
 	title: string;
 	time: string;
-	tags: string;
+	tags: string[];
+  slug: string;
 }
 
-const { title, time, tags } = Astro.props;
+const { title, time, tags, slug } = Astro.props;
 ---
 
 <article
@@ -15,17 +16,21 @@ const { title, time, tags } = Astro.props;
     <time datetime="2022-10-10" class="block text-xs text-gray-500">
       {time}
     </time>
-    <a href="#">
+    <a href={`/posts/${slug}`}>
       <h3 class="mt-0.5 text-lg font-medium text-gray-900">
         {title}
       </h3>
     </a>
     <div class="mt-4 flex flex-wrap gap-1">
-      <span
+      {
+        tags.map((item) => (
+          <span
         class="whitespace-nowrap rounded-full bg-purple-100 px-2.5 py-0.5 text-xs text-purple-600"
       >
-        {tags}
+        {item}
       </span>
+        ))
+      }
     </div>
   </div>
 </article>
